kubernetes/nginx-reverseproxy-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -o ./kubernetes
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: nginx-reverseproxy
  name: nginx-reverseproxy
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: nginx-reverseproxy
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -o ./kubernetes
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network/microservices: "true"
        io.kompose.service: nginx-reverseproxy
    spec:
      containers:
        - image: nginx:1.13.11
          name: nginx-reverseproxy
          ports:
            - containerPort: 1443
          resources: {}
          volumeMounts:
            - mountPath: /run/secrets_from/nginx.cert
              name: nginx-cert-secret
              readOnly: true
            - mountPath: /run/secrets_from/nginx.key
              name: nginx-key-secret
              readOnly: true
            - mountPath: /run/secrets_from/nginx.conf
              name: nginx-conf-secret
              readOnly: true
            # - mountPath: /run/nginx_from/
            #   name: nginx-reverseproxy-claim0
            #   readOnly: true
          # hack: copy secrets file to desired path. k8s doesn't allow to mount a file to a specific file location
          lifecycle:
            postStart:
              exec:
                command:
                  - /bin/sh
                  - -c
                  - |
                    cp /run/secrets_from/nginx.cert/secret.file /run/secrets/nginx.cert
                    cp /run/secrets_from/nginx.key/secret.file /run/secrets/nginx.key
                    cp /run/secrets_from/nginx-line.conf/secret.file /etc/nginx/nginx.conf
                    cp /run/nginx_from/* /etc/nginx/

      restartPolicy: Always
      volumes:
        - name: nginx-cert-secret
          secret:
            secretName: nginx-cert-secret
        - name: nginx-key-secret
          secret:
            secretName: nginx-key-secret
        - name: nginx-conf-secret
          secret:
            secretName: nginx-conf-secret

        # - name: nginx-reverseproxy-claim0
        #   persistentVolumeClaim:
        #     claimName: nginx-reverseproxy-claim0

status: {}
