kubernetes/loadbalancer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-loadbalancer
spec:
  selector:
    app: example
  ports:
    - port: 1443
      targetPort: 1443
  type: LoadBalancer
