kubernetes/microservices-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: microservices
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/microservices: "true"
  podSelector:
    matchLabels:
      io.kompose.network/microservices: "true"
